Agregamos un spinner de carga y estilos para los datos a renderizar, proyecto finalizado

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body {
   color: var(--black);
 }
 .form select {
-  background-color: #ECEBEB;
+  background-color: #ebebec;
   border: none;
   padding: 1rem;
   border-radius: 1rem;
